--- a/sections/home-promises.liquid
+++ b/sections/home-promises.liquid
@@ -11,19 +11,19 @@
     </div>
     <img
       class="promises-main-image"
-      src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_269.png?v=1737700505"
+      src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/11_d0826c6d-46a3-4e57-a6a3-585a7b087a99.png?v=1738689761"
     >
     <img
       class="promises-main-image"
-      src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_268.png?v=1737700505"
+      src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/33_f2cfea92-3840-4261-b69d-cb3b233754f5.png?v=1738689761"
     >
     <img
       class="promises-main-image"
-      src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_266.png?v=1737700504"
+      src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/22_23519c71-204f-4e61-b5f9-8adf2c1b0455.png?v=1738689761"
     >
     <img
       class="promises-main-image"
-      src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_267.png?v=1737700505"
+      src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/44.png?v=1738689761"
     >
   </div>
 </div>
@@ -41,6 +41,7 @@
     align-items: center;
     position: relative;
     padding-bottom: 40px;
+    gap: 35px;
   }
   .promises-background-image {
     position: absolute;
@@ -62,7 +63,7 @@
     height: auto;
   }
   .promises-main-image {
-    width: 150px;
+    width: 115px;
     height: auto;
   }
   @media (max-width: 850px) {
@@ -85,17 +86,16 @@
   }
   @media (max-width: 500px) {
     .home-promises-container {
-      gap: 0;
+      gap: 50px;
+      display: flex;
+      flex-wrap: wrap;
+      padding-top: 20px;
     }
     .background-images-container {
       display: none;
     }
-    .home-promises-container {
-      display: flex;
-      flex-wrap: wrap;
-    }
     .promises-main-image {
-      width: 17rem;
+      width: 12rem;
     }
   }
 </style>
