--- a/sections/product-infographics-fold.liquid
+++ b/sections/product-infographics-fold.liquid
@@ -7,11 +7,23 @@
           {% assign collection = product.metafields.content.combos_collection.value %}
           {% if collection and collection.products.size > 0 %}
             {% for product in collection.products %}
-              <div class="carousel-item">
-                <a href="{{ product.url }}">
-                  <img src="{{ product.featured_image | img_url: 'large' }}" alt="{{ product.featured_image.alt }}">
-                </a>
-              </div>
+              {% comment %}
+                <div class="carousel-item">
+                  <a href="{{ product.url }}">
+                    <img src="{{ product.featured_image | img_url: 'large' }}" alt="{{ product.featured_image.alt }}">
+                  </a>
+                </div>
+              {% endcomment %}
+              {% render 'card-product',
+                card_product: product,
+                show_secondary_image: true,
+                lazy_load: true,
+                quick_add: 'standard',
+                section_id: section.id,
+                horizontal_quick_add: true,
+                show_rating: false,
+                media_aspect_ratio: 'square'
+              %}
             {% endfor %}
           {% else %}
             <p>No products found in the specified collection.</p>
@@ -67,7 +79,8 @@
     gap: 0.5%;
   }
 
-  .carousel-item {
+  .carousel-item,
+  .carousel-track .card-wrapper {
     min-width: 33%;
     max-width: 33%;
   }
@@ -131,10 +144,12 @@
     right: 30px;
   }
   @media (max-width: 850px) {
-    .carousel-item {
+    .carousel-item,
+    .carousel-track .card-wrapper {
       width: 230px;
     }
-    .carousel-container {
+    .carousel-container,
+    .carousel-track .card-wrapper {
       justify-content: start;
     }
   }
