--- a/sections/sticky-add_to_cart.liquid
+++ b/sections/sticky-add_to_cart.liquid
@@ -1,4 +1,5 @@
 <div class="sticky-atc-container">
+  <img class="go-to-top-button" src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_323.png?v=1738057124">
   <div class="page-width">
     {%- assign product_form_id = 'product-form-' | append: section.id -%}
     {%- render 'sticky-price', product: product, use_variant: true, price_class: 'price--large' -%}
@@ -10,13 +11,23 @@
 <style>
   .sticky-atc-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: end;
     position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
     z-index: 90;
+  }
+  .go-to-top-button {
+    transform: rotate(90deg);
+    margin-right: 42px;
+    margin-bottom: 15px;
+    border: solid 1px #362c42;
+    border-radius: 50% !important;
+    width: 40px !important;
+    cursor: pointer;
   }
   .sticky-atc-container img {
     width: 50px;
@@ -75,8 +86,20 @@
     .sticky-atc-container .page-width {
       padding: 10px;
     }
+    .go-to-top-button {
+      margin-bottom: 10px;
+      margin-right: 10px;
+    }
   }
 </style>
+<script>
+  document.querySelector('.go-to-top-button').addEventListener('click', () => {
+    window.scrollTo({
+      top: 0,
+      behavior: 'smooth',
+    });
+  });
+</script>
 {% schema %}
 {
   "name": "Sticky A2C",
