--- a/sections/product-info-fold.liquid
+++ b/sections/product-info-fold.liquid
@@ -146,6 +146,14 @@
             {%- endif -%}
           {% endcomment %}
         </div>
+        {%- assign discount = product.compare_at_price | minus: product.price -%}
+        {% if discount > 0 and discount != null %}
+          <p class="price-dropped-product-card price">
+            ↓ price dropped by
+            <span>{{ discount | money }}</span>
+          </p>
+        {% endif %}
+
         {% comment %} Product Variant {% endcomment %}
         {%- for block in section.blocks -%}
           {%- case block.type -%}
@@ -202,20 +210,30 @@
           section_id: section.id,
           show_pickup_availability: true
         -%}
-        <div class="product-info-fold-claims-container">
-          {% if product.metafields.content.banner_2 %}
+        {% comment %}
+          {% if product.metafields.content.banner_1 %}
             <img
-              class="product-info-fold-claims-discreet-image"
-              src="{{ product.metafields.content.banner_2 | image_url }}"
+              class="product-info-fold-claims-container-first-image"
+              src="{{ product.metafields.content.banner_1 | image_url }}"
             >
           {% endif %}
+        {% endcomment %}
+        <div class="product-info-fold-claims-container">
           <div>
-            <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/pdp-discreet-shipping.png?v=1737969814">
-            <p>Free discreet shipping</p>
+            <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/india.png?v=1738690950">
+            <p>Designed for Indians</p>
+          </div>
+          <div>
+            <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/express-delivery.png?v=1738690732">
+            <p>1-3 day Xpress Shipping</p>
           </div>
           <div>
             <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/pdp-warranty.png?v=1737969814">
             <p>100 Days Warranty</p>
+          </div>
+          <div>
+            <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/pdp-discreet-shipping.png?v=1737969814">
+            <p>Free & discreet shipping</p>
           </div>
         </div>
       </div>
@@ -262,6 +280,11 @@
   </div>
 </product-info>
 <style>
+  .product-info-fold-left-container .price-dropped-product-card {
+    font-size: 1.5rem !important;
+    color: #5d00b9 !important;
+  }
+
   .hotspot-backdrop {
     position: fixed;
     top: 0;
@@ -274,7 +297,6 @@
     z-index: 1;
     display: none;
   }
-
   .content-slider-strip p {
     font-size: 1.1rem !important;
     text-transform: uppercase;
@@ -364,7 +386,7 @@
   }
   .product-info-fold-left-subheadng {
     margin: 0;
-    color: #b089cc;
+    color: #5d00b9;
     font-weight: 500;
     font-size: 1.7rem;
     letter-spacing: 0;
@@ -441,7 +463,7 @@
     margin: 15px 0 20px;
     font-weight: 600;
   }
-  .product-info-fold-claims-container {
+  /* .product-info-fold-claims-container {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -453,7 +475,22 @@
     align-items: start;
     width: 100%;
     gap: 10px;
+  } */
+  .product-info-fold-claims-container-first-image {
+    width: 100%;
   }
+  .product-info-fold-claims-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    width: 100%;
+    align-items: start;
+  }
+
+  .product-info-fold-claims-container > *:nth-child(2n) {
+    justify-self: end;
+  }
+
   .product-info-fold-claims-container div {
     width: -webkit-fit-content;
     width: -moz-fit-content;
@@ -465,9 +502,7 @@
   }
   .product-info-fold-claims-container div img {
     width: 24px;
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
+    height: 24px;
   }
   .product-info-fold-claims-container div p {
     margin: 0;
@@ -475,6 +510,9 @@
     font-weight: 400;
     font-size: 1.3rem;
     color: #000;
+    text-wrap: nowrap;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
   }
   @-webkit-keyframes floatUpDown {
     0% {
@@ -694,6 +732,10 @@
     display: none;
   }
   @media (max-width: 756px) {
+    .product-info-fold-left-container .price-dropped-product-card {
+      font-size: 1.5rem !important;
+    }
+
     .product-info-fold-claims-discreet-image {
       width: 100%;
       border-radius: 10px;
@@ -708,10 +750,11 @@
       padding-bottom: 14px;
     }
     .product-info-fold-claims-container {
-      border-top: solid 1px #3b2b4a50;
       padding-top: 14px;
-      display: flex;
-      flex-wrap: wrap;
+    }
+    .product-info-fold-claims-container-first-image {
+      border-top: solid 1px #3b2b4a50;
+      padding-top: 11px;
     }
     .product-info-fold-left-description {
       margin: 5px 0 0 0;
