--- a/assets/custom.css
+++ b/assets/custom.css
@@ -275,7 +275,7 @@ slideshow-component .slider-counter__link--dots .dot {
 
 .slideshow_media_mobile_image {
     display: none !important;
-    aspect-ratio: 686 / 600 !important;
+    aspect-ratio: 686 / 960 !important;
     height: auto !important;
 }
 
@@ -301,6 +301,11 @@ slideshow-component .slider-counter__link--dots .dot {
     font-size: 1rem !important;
     border-radius: 500px !important;
     text-transform: uppercase;
+}
+
+.carousel-track .quick-add__submit {
+    width: 90%;
+    padding: 0 !important;
 }
 
 .banner__buttons a:hover,
@@ -635,7 +640,7 @@ slideshow-component .slider-counter__link--dots .dot {
 .images-carousel-home {
     height: auto;
     width: 100%;
-    aspect-ratio: 1920 / 600;
+    aspect-ratio: 1920 / 820;
 }
 
 sticky-header {
@@ -740,6 +745,9 @@ sticky-header {
     margin: 13px 0 0;
 }
 
+.carousel-track .card-wrapper .card__information {
+    width: 310px !important;
+}
 
 @media(max-width:850px) {
     .footer-block__newsletter p {
@@ -925,7 +933,7 @@ sticky-header {
     }
 
     .images-carousel-home {
-        aspect-ratio: 686 / 600;
+        aspect-ratio: 686 / 960;
     }
 
     .price {
@@ -1030,4 +1038,10 @@ sticky-header {
     }
 
 
+}
+
+@media(max-width:500px) {
+    .carousel-track .card-wrapper .card__information {
+        width: 195px !important;
+    }
 }
