--- a/sections/home-circle-collections.liquid
+++ b/sections/home-circle-collections.liquid
@@ -1,40 +1,42 @@
 <div class="header-categories-container">
-  <a href="/collections/collection">
+  <a href="/collections/massagers">
     <div class="header-category">
       <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_276.png?v=1737752059">
       <p>Massagers</p>
     </div>
   </a>
-  <a href="/collections/collection">
+  <a href="/collections/all-1">
     <div class="header-category">
       <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_277.png?v=1737752059">
-      <p>Vibrators</p>
+      <p>All</p>
     </div>
   </a>
-  <a href="/collections/collection">
+  <a href="/collections/bundles">
     <div class="header-category">
       <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_278.png?v=1737752059">
       <p>Bundles</p>
     </div>
   </a>
-  <a href="/collections/collection">
+  <a href="/collections/lubes">
     <div class="header-category">
       <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_279.png?v=1737752059">
       <p>Lubes & Oils</p>
     </div>
   </a>
-  <a href="/collections/collection">
-    <div class="header-category">
-      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_280.png?v=1737752059">
-      <p>Deals</p>
-    </div>
-  </a>
-  <a href="/collections/collection">
-    <div class="header-category">
-      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_281.png?v=1737752059">
-      <p>Gifting</p>
-    </div>
-  </a>
+  {% comment %}
+    <a href="/collections/collection">
+      <div class="header-category">
+        <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_280.png?v=1737752059">
+        <p>Deals</p>
+      </div>
+    </a>
+    <a href="/collections/collection">
+      <div class="header-category">
+        <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_281.png?v=1737752059">
+        <p>Gifting</p>
+      </div>
+    </a>
+  {% endcomment %}
 </div>
 
 {% schema %}
