--- a/sections/sticky-add_to_cart.liquid
+++ b/sections/sticky-add_to_cart.liquid
@@ -1,5 +1,5 @@
 <div class="sticky-atc-container">
-  <img class="go-to-top-button" src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_323.png?v=1738057124">
+  <img class="go-to-top-button" src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_349.png?v=1738697314">
   <div class="page-width">
     {%- assign product_form_id = 'product-form-' | append: section.id -%}
     {%- render 'sticky-price', product: product, use_variant: true, price_class: 'price--large' -%}
@@ -21,10 +21,8 @@
     z-index: 90;
   }
   .go-to-top-button {
-    transform: rotate(90deg);
     margin-right: 42px;
     margin-bottom: 15px;
-    border: solid 1px #362c42;
     border-radius: 50% !important;
     width: 40px !important;
     cursor: pointer;
@@ -41,10 +39,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #fff;
+    background: linear-gradient(90deg, rgba(103, 0, 192, 1), rgba(1, 0, 1, 1) 100%);
     border: solid 1px #382d43;
     width: 100%;
-    border-radius: 15px 15px 0 0;
     padding: 15px 5rem;
     gap: 20px;
   }
@@ -64,6 +61,12 @@
   .sticky-atc-container-buy-button {
     width: 45%;
   }
+  .sticky-atc-container-buy-button button {
+    font-size: 1.7rem;
+    line-height: 0;
+    font-family: 'Kanit';
+    font-weight: 400;
+  }
   .sticky-atc-container .price-item--sale,
   .sticky-atc-container .page-width .price--large p {
     font-size: 1.5rem;
@@ -72,6 +75,7 @@
     letter-spacing: 0;
     line-height: 2.5rem;
     margin: 0;
+    color: #fff !important;
   }
   .sticky-atc-container .price--on-sale .price-item--regular {
     font-size: 1.5rem;
@@ -80,15 +84,24 @@
     letter-spacing: 0;
     line-height: 2.5rem;
     margin: 0;
+    color: #fff !important;
     opacity: 0.7;
   }
   @media (max-width: 500px) {
     .sticky-atc-container .page-width {
-      padding: 10px;
+      padding: 6px 10px;
     }
     .go-to-top-button {
       margin-bottom: 10px;
       margin-right: 10px;
+    }
+    .sticky-atc-container-buy-button {
+      margin-right: -8px;
+      scale: 0.9;
+    }
+    .sticky-atc-container-buy-button button {
+      font-size: 1.7rem;
+      letter-spacing: 0;
     }
   }
 </style>
