--- a/sections/lp-featured_product.liquid
+++ b/sections/lp-featured_product.liquid
@@ -96,8 +96,8 @@
 
 <style>
   @font-face {
-    font-family: 'Tanker';
-    src: url('{{ "tanker-regular.otf" | asset_url }}') format('opentype');
+    font-family: 'Basalte';
+    src: url('{{ "Basalte-Fond.otf" | asset_url }}') format('opentype');
   }
 
     .lp-dropdowns-container {
@@ -167,7 +167,7 @@
       padding: 0 !important;
     }
     .accordion__content {
-      color: #fff;
+      color: #dd9942 !important;
       padding: 0 !important;
       margin: 0 !important;
     }
@@ -179,8 +179,8 @@
       font-family: 'Inter', sans-serif;
     }
     .accordion__title {
-      font-family: 'Tanker';
-    color: #fff;
+      font-family: 'Basalte';
+    color: #dd9942 !important;
     font-size: 2.7rem;
     font-weight: 200;
     }
@@ -207,7 +207,7 @@
   .lp-featured-prod_icons-parent p {
     font-weight: 400;
     font-size: 1.4rem;
-    color: #ff0000;
+    color: #dd9942;
     text-align: center;
     line-height: 1.8rem;
   }
@@ -234,7 +234,6 @@
   .lp-featured_product_usp_text_png {
     width: 30px;
     height: auto;
-    aspect-ratio: 1/1;
   }
   .lp-featured_product_usp_text {
     color: #ff0000;
